# fast-win-launcher

./: .gitignore  Cargo.toml  README.md
src/: appbar.rs  apps.rs  autostart.rs  calc.rs  fuzzy.rs  hook.rs  launcher.rs  main.rs  power.rs  state.rs  taskbar.rs  time_fn.rs  topbar.rs  tray.rs  volume.rs
